# uglycraft

./: .gitignore  CHANGELOG.md  CLAUDE.md  DANISOFT.PAS  EXTRA1.PAS  README.md  cells.py  constants.py  crafting.py  entities.py  game.py  hiscore.py  hud.py  itch-description.html  itch-description.md  itch_profile.html  itch_profile.md  leveldump.py  levelgraph.py  levellayout.py  levels.py  main.py  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  rooms.py  run_game.py  sounds.py  sprites.py  test_levelgraph.py  world.py
.claude/commands/: build-linux.md  build-windows.md  deploy.md
LICENSES/: NOTICE.txt
contrib/: uglycraft-docs.service
docs/: index.md
docs/hooks/: recent_specs.py
kb/: arch-packaging.md  architecture.md  backlog.md  feature-inventory.md  findings.md  release-process.md  requirements.md  uglycraft-display.md  uglycraft-layouts.md  uglycraft-levels.md  uglycraft-mechanics.md  uglycraft-sound.md  world-model-review.md
original/: CHANGELOG.md  CLAUDE.md  DANISOFT.PAS  DANISOFT.pp  EXTRA1.PAS  IDENTIFIERS.md  README.md  STYLE.md  UGLI_2.ORIG  UGLI_2.PAS  UGLI_2.pp  UGLI_2.rsj  UGLI_2_Bench.pp  UGLI_2_BufFlush_Variants.inc  UGLI_2_Core.inc  UGLI_2_Replay.pp  UGLI_2_Test.pp  UOSSound.pp  reformat.py  renames.toml  uossound.pas
original/kb/: crt-removal.md  display-system.md  fpc-build-environment.md  game-mechanics.md  i18n.md  level-layouts.md  sound-system.md
original/spec/: async-sound.md  bufflush-no-consec-skip.md  bufflush-v2b-production.md  cli-help.md  cli-level-skip-intro.md  color-system.md  dialog-refactor.md  direction-enum.md  draw-state-separation.md  game-log.md  grace-time.md  highscore-entry-wait-key.md  highscore-rework.md  history-screen.md  i18n.md  input-drain.md  item-data-record.md  item-reorder.md  main-loop-refactor.md  screen-buffer.md  silence-stderr.md  silence-test-tty-warnings.md  stderr-log-refactor.md  unit-tests.md  wbflush-dump-replay.md
original/translations/: UGLI_2.pot  de.mo  de.po  history_de.txt  history_en.txt
original/uos/: .gitignore  uos.ppu  uos_define.inc  uos_flat.ppu  uos_portaudio.ppu
packaging/: .SRCINFO  .SRCINFO-git  PKGBUILD  PKGBUILD-dev  PKGBUILD-git  ugli.desktop  ugli.sh  uglycraft.desktop
packaging/spec/: aur-packages.md
scratchpad/: key_final_mockups.py  key_ghost_mockups.py  key_order_compare.py  key_order_diag.py  key_stack_mockups.py  profile_generation.py  sweep_award_visibility.py  sweep_award_visibility2.py  sweep_dup_colour.py  sweep_enemy_awards.py  sweep_items_on_start.py  sweep_orphan_keys.py  sweep_plate_clearance.py  sweep_puzzle_anchors.py  sweep_stuck_blocks.py  time_generation.py
spec/: 0003-sounds.md  0004-sfx-redesign.md  0005-music-themes.md  0007-act2-beyond-the-vault.md  0008-level-graph-system.md  0009-phase3-hazards.md  0011-push-puzzle-placement.md  0012-bug-open-door-draw-and-planks-count.md  0015-layout-t-chain-rework.md  0016-level-density.md  0017-large-levels.md  0018-player-spawn-wall.md  0019-l-corridor-orientation.md  0020-enemy-at-grid-entry.md  0021-room-count-driven-strategy.md  0022-level-entrance.md  0023-fix-reinforced-walls-indestructible.md  0024-fix-z-zone-corner-gap.md  0025-greedy-zone-assignment.md  0026-wilson-spanning-tree.md  0027-bridge-state-per-grid.md  0028-lazy-level-generation.md  0029-water-challenge-fixes.md  0030-key-placement-fixes.md  0031-overlay-box-overflow.md  0032-multigrid-closet-drops.md  0033-border-corridor-stitch.md  0033-no-item-on-player-start.md  0034-no-empty-rooms.md  0035-plate-not-at-entrance.md  0036-enemy-room-size-floor.md  0037-gate-unfinished-crafting.md  0038-key-inventory-display.md  0039-entry-tile-exit-type.md  0040-simple-early-layouts.md  0041-auto-craft-bridge.md  0042-border-corridor-stitch.md  0043-native-resolution.md  0044-characterization-harness.md  0045-world-extraction.md  (+70 more)
src/uglycraft/: __init__.py  cells.py  crafting.py  entities.py  game.py  hiscore.py  leveldump.py  levelgraph.py  main.py  rooms.py  sprites.py
tests/: _gen_hash.py  act2_fixtures.py  conftest.py  harness.py  test_act1_entrance.py  test_act2_solvability.py  test_border_continuity.py  test_cells.py  test_death_respawn.py  test_dispatch.py  test_dup_colour.py  test_enemy_room_size.py  test_entrance.py  test_entrance_exit.py  test_exploding_blocks.py  test_flames.py  test_generation_determinism.py  test_golden_act1.py  test_golden_act2.py  test_graph_building.py  test_harness.py  test_hud.py  test_key_placement.py  test_layout.py  test_layout_log.py  test_lazy_levels.py  test_leveldump.py  test_node_drops.py  test_overlay_box.py  test_perf.py  test_placement_rules.py  test_playability.py  test_registry.py  test_render.py  test_room_scaling.py  test_room_shapes.py  test_rooms.py  test_sokoban.py  test_tester_gating.py  test_water_challenge.py  (+3 more)
tests/golden/: act1_L01_walk_easy.json  act1_L01_walk_hard.json  act1_L02_walk_easy.json  act1_L03_walk_easy.json  act1_L04_walk_easy.json  act1_L05_walk_easy.json  act1_L05_walk_hard.json  act1_L06_walk_easy.json  act1_L07_walk_easy.json  act1_L08_walk_easy.json  act1_L09_walk_easy.json  act1_L10_walk_easy.json  act1_advance.json  act1_death.json  act1_death_shield.json  act1_gameover.json  act1_pause.json  act1_shield.json  act1_wallbreak_place.json  act2_L11_walk.json  act2_L13_walk.json  act2_door.json  act2_flames.json  act2_forge.json  act2_gate.json  act2_patrol.json  act2_transition.json  act2_water.json  shot_act1_field.json  shot_act2_field.json  shot_boss_field.json  shot_difficulty.json  shot_hud_bridge.json  shot_hud_keys.json  shot_inventory.json  shot_overlay_game_over.json  shot_overlay_intro.json  shot_overlay_pause.json  shot_overlay_play_again.json  shot_overlay_win.json  (+1 more)
uglycraft/: __main__.py  game.py  hud.py  levellayout.py  levels.py  sounds.py  world.py
