[project]
name        = "uglycraft"
version     = "1.0"
description = "A remake of UGLI (1993), a DOS maze-chase game"
authors     = [{name = "Daniel Bausch", email = "db@edv-bausch.de"}]
requires-python = ">=3.10"
dependencies    = ["pygame>=2.0", "numpy"]

[tool.poe.tasks]

[tool.poe.tasks.install]
help  = "Create venv and install all dependencies"
shell = "python3 -m venv .venv && .venv/bin/pip install pygame numpy poethepoet pyinstaller"

[tool.poe.tasks.run]
help = "Run the game"
cmd  = ".venv/bin/python main.py"

[tool.poe.tasks.run-level]
help   = "Run the game starting at a specific level (e.g. poe run-level 10)"
shell  = ".venv/bin/python main.py --level ${level}"
args   = [{name = "level", positional = true}]

[tool.poe.tasks.build-linux]
help  = "Build standalone Linux distributable (dist/linux-64/)"
shell = """
  .venv/bin/pyinstaller --onefile --noconsole --name uglycraft \
    --add-data "fonts/ShareTechMono-Regular.ttf:fonts" \
    --distpath dist/linux-64 main.py
  cp -r LICENSES dist/linux-64/
"""

[tool.poe.tasks.build-windows]
help  = "Build standalone Windows distributable (dist/windows-64/) via Wine"
shell = """
  WINEDEBUG=-all wine \
    ~/.wine/drive_c/users/$USER/AppData/Local/Programs/Python/Python313/python.exe \
    -m PyInstaller --onefile --noconsole --name uglycraft \
    --add-data "fonts/ShareTechMono-Regular.ttf;fonts" main.py
  mkdir -p dist/windows-64
  mv dist/uglycraft.exe dist/windows-64/
  cp -r LICENSES dist/windows-64/
"""

[tool.poe.tasks.build-original]
help  = "Build the original 1996 Pascal source (original/UGLI_2.PAS) with FPC"
shell = """
  UOS_BASE="https://raw.githubusercontent.com/fredvs/uos/main/src"
  for f in uos.pas uos_flat.pas uos_portaudio.pas; do
    [ -f original/uos/$f ] || curl -fsSL "$UOS_BASE/$f" -o original/uos/$f
  done
  cd original && fpc -Mtp -Fuuos UGLI_2.PAS
"""

[tool.poe.tasks.clean]
help  = "Remove build artifacts"
shell = """
  rm -rf dist/ build/ uglycraft.spec
  rm -f original/UGLI_2 original/UGLI_2.o
  rm -f original/uos/*.o original/uos/*.ppu
"""

[tool.poe.tasks.deploy-original-linux]
help  = "Push the FPC Linux port of UGLI 2 to itch.io"
shell = """
  mkdir -p dist/original-linux
  cp original/UGLI_2 dist/original-linux/
  butler push dist/original-linux dbausch/uglycraft:original-linux \
    --userversion $(git describe --tags --abbrev=0 | sed 's/^v//')
"""

[tool.poe.tasks.deploy-original-dos]
help  = "Push the original DOS executable of UGLI 2 to itch.io"
shell = """
  mkdir -p dist/original-dos
  cp original/UGLI_2.EXE dist/original-dos/
  butler push dist/original-dos dbausch/uglycraft:original-dos \
    --userversion $(git describe --tags --abbrev=0 | sed 's/^v//')
"""

[tool.poe.tasks.deploy]
help     = "Push all distributables to itch.io"
sequence = ["deploy-original-linux", "deploy-original-dos", "_push-linux", "_push-windows"]

[tool.poe.tasks._push-linux]
shell = "butler push dist/linux-64 dbausch/uglycraft:linux-64 --userversion $(git describe --tags --abbrev=0 | sed 's/^v//')"

[tool.poe.tasks._push-windows]
shell = "butler push dist/windows-64 dbausch/uglycraft:windows-64 --userversion $(git describe --tags --abbrev=0 | sed 's/^v//')"
