[project]
name        = "uglycraft"
version     = "1.0"
description = "A remake of UGLI (1993), a DOS maze-chase game"
authors     = [{name = "Daniel Bausch", email = "db@edv-bausch.de"}]
requires-python = ">=3.10"
dependencies    = ["pygame>=2.0", "numpy", "pyinstaller"]

[tool.poe]
verbosity = -1

[tool.poe.tasks]

[tool.poe.tasks.install]
help  = "Create venv and install all dependencies"
shell = "virtualenv .venv && .venv/bin/pip install -r requirements.txt"

[tool.poe.tasks.run]
help = "Run the game (e.g. poe run --level 5)"
cmd  = ".venv/bin/python main.py"

[tool.poe.tasks.run-original]
help  = "Run the original UGLI 2 in a new terminal. Forward args with --: poe run-original -- --level 5"
shell = """
  fs=false
  args=""
  for arg in $POE_EXTRA_ARGS; do
    if [ "$arg" = "--help" ] || [ "$arg" = "-h" ]; then
      original/UGLI_2 $POE_EXTRA_ARGS
      exit 0
    fi
    if [ "$arg" = "--fs" ] || [ "$arg" = "-f" ]; then
      fs=true
    else
      args="$args $arg"
    fi
  done
  if [ "$fs" = true ]; then
    if [ -n "${TERMINAL_FS}" ]; then
      ${TERMINAL_FS} original/UGLI_2 $args
    else
      kitty -c original/ANSI-87.conf \
            -o font_family="Liberation Mono" -o font_size=28 \
            -o remember_window_size=false \
            -o initial_window_height=25c -o initial_window_width=80c \
            -o 'single_window_padding_width=1 58.5' \
            --start-as=fullscreen \
            -- original/UGLI_2 $args
    fi
  elif [ -n "${TERMINAL}" ]; then
    ${TERMINAL} original/UGLI_2 $args
  else
    kitty -c original/ANSI-87.conf \
          -o font_family="Liberation Mono" -o font_size=16 \
          -o remember_window_size=false \
          -o initial_window_height=25c -o initial_window_width=80c \
          -- original/UGLI_2 $args
  fi
"""

[tool.poe.tasks.run-original-dos]
help  = "Run the original DOS version of UGLI 2 in DOSBox"
cmd   = "dosbox original/UGLI_2.EXE -exit"

[tool.poe.tasks.build-linux]
help  = "Build standalone Linux distributable (dist/linux-64/)"
shell = """
  .venv/bin/pyinstaller --onefile --noconsole --name uglycraft \
    --add-data "fonts/ShareTechMono-Regular.ttf:fonts" \
    --add-data "translations/history_en.txt:translations" \
    --distpath dist/linux-64 main.py
  cp -r LICENSES dist/linux-64/
"""

[tool.poe.tasks.setup-windows]
help  = "One-time setup: install Python 3.13 + deps into Wine for Windows builds"
shell = """
  curl -LO https://www.python.org/ftp/python/3.13.0/python-3.13.0-amd64.exe
  WINEDEBUG=-all wine python-3.13.0-amd64.exe /quiet PrependPath=1
  rm python-3.13.0-amd64.exe
  WINEDEBUG=-all wine \
    ~/.wine/drive_c/users/$USER/AppData/Local/Programs/Python/Python313/python.exe \
    -m pip install pygame numpy pyinstaller
"""

[tool.poe.tasks.build-windows]
help  = "Build standalone Windows distributable (dist/windows-64/) via Wine"
shell = """
  WINEDEBUG=-all wine \
    ~/.wine/drive_c/users/$USER/AppData/Local/Programs/Python/Python313/python.exe \
    -m PyInstaller --onefile --noconsole --name uglycraft \
    --add-data "fonts/ShareTechMono-Regular.ttf;fonts" \
    --add-data "translations/history_en.txt;translations" main.py
  mkdir -p dist/windows-64
  mv dist/uglycraft.exe dist/windows-64/
  cp -r LICENSES dist/windows-64/
"""

[tool.poe.tasks.build-original]
help  = "Build the original 1996 Pascal source (original/UGLI_2.pp) with FPC"
shell = """
  UOS_BASE="https://raw.githubusercontent.com/fredvs/uos/main/src"
  for f in uos.pas uos_flat.pas uos_portaudio.pas; do
    [ -f original/uos/$f ] || curl -fsSL "$UOS_BASE/$f" -o original/uos/$f
  done
  [ -f original/ANSI-87.conf ] || curl -fsSL \
    "https://raw.githubusercontent.com/kovidgoyal/kitty-themes/master/themes/ANSI-87.conf" \
    -o original/ANSI-87.conf
  echo "const GitSHA = '$(git rev-parse --short HEAD)';" > original/git_sha.inc
  cd original && fpc -Fuuos UGLI_2.pp
"""

[tool.poe.tasks.test-original]
help  = "Build and run UGLI_2 unit tests"
shell = """
  echo "const GitSHA = '$(git rev-parse --short HEAD)';" > original/git_sha.inc
  cd original && fpc -Fuuos -oUGLI_2_Test UGLI_2_Test.pp && ./UGLI_2_Test --all --format=plainnotiming
"""

[tool.poe.tasks.build-replay]
help  = "Build the WBFlush replay debugging utility (UGLI_2_Replay)"
shell = "cd original && fpc -Fuuos -oUGLI_2_Replay UGLI_2_Replay.pp"

[tool.poe.tasks.bench-original]
help  = "Build and run BufFlush benchmark (opens 80-column terminal for visual test; timing results print here after window closes)"
shell = """
  (cd original && fpc -Fuuos -oUGLI_2_Bench UGLI_2_Bench.pp) || exit 1
  TMP=$(mktemp)
  if [ -n "${TERMINAL}" ]; then
    ${TERMINAL} original/UGLI_2_Bench --output "$TMP"
  else
    kitty -o font_family="Liberation Mono" -o font_size=16 \
          -o remember_window_size=false \
          -o initial_window_height=25c -o initial_window_width=80c \
          original/UGLI_2_Bench --output "$TMP"
  fi
  cat "$TMP"
  rm -f "$TMP"
"""

[tool.poe.tasks.clean]
help  = "Remove build artifacts"
shell = """
  rm -rf dist/ build/ uglycraft.spec
  rm -f original/UGLI_2
  rm -f original/*.o original/*.ppu
  rm -f original/uos/*.o original/uos/*.ppu
"""

[tool.poe.tasks.make-pot]
help = "Regenerate PO template from compiled resourcestrings"
cmd  = "rstconv -i original/UGLI_2.rsj -o original/translations/UGLI_2.pot"

[tool.poe.tasks.deploy-original-linux]
help  = "Push the FPC Linux port of UGLI 2 to itch.io"
shell = """
  mkdir -p dist/original-linux/translations
  cp original/UGLI_2 dist/original-linux/
  cp original/translations/*.mo dist/original-linux/translations/
  cp original/translations/history_*.txt dist/original-linux/translations/
  VERSION=$(grep -oP "(?<=Version = ')[^']+" original/UGLI_2.pp)
  butler push dist/original-linux dbausch/uglycraft:original-linux \
    --userversion "$VERSION"
"""

[tool.poe.tasks.deploy-original-dos]
help  = "Push the original DOS executable of UGLI 2 to itch.io"
shell = """
  mkdir -p dist/original-dos
  cp original/UGLI_2.EXE dist/original-dos/
  butler push dist/original-dos dbausch/uglycraft:original-dos \
    --userversion 2.0
"""

[tool.poe.tasks.deploy-uglycraft]
help     = "Push Linux and Windows distributables to itch.io"
sequence = ["_push-linux", "_push-windows"]

[tool.poe.tasks.deploy]
help     = "Push all distributables to itch.io"
sequence = ["deploy-original-linux", "_push-linux", "_push-windows", "deploy-aur"]

[tool.poe.tasks.deploy-aur]
help  = "Update and push the release AUR package (../uglycraft-aur)"
shell = """
  AUR_DIR=../uglycraft-aur
  [ -d "$AUR_DIR/.git" ] || { echo "error: $AUR_DIR is not a git repo"; exit 1; }
  cp packaging/PKGBUILD packaging/.SRCINFO "$AUR_DIR/"
  cd "$AUR_DIR"
  VER=$(grep -oP '(?<=pkgver=)\\S+' PKGBUILD)-$(grep -oP '(?<=pkgrel=)\\S+' PKGBUILD)
  git add PKGBUILD .SRCINFO
  if git diff --cached --quiet; then
    echo "nothing to update — AUR repo already matches"
  else
    git commit -m "uglycraft $VER"
    git push
  fi
"""

[tool.poe.tasks.deploy-aur-git]
help  = "Update and push the git AUR package (../uglycraft-git-aur)"
shell = """
  AUR_DIR=../uglycraft-git-aur
  [ -d "$AUR_DIR/.git" ] || { echo "error: $AUR_DIR is not a git repo"; exit 1; }
  cp packaging/PKGBUILD-git "$AUR_DIR/PKGBUILD"
  cp packaging/.SRCINFO-git "$AUR_DIR/.SRCINFO"
  cd "$AUR_DIR"
  git add PKGBUILD .SRCINFO
  if git diff --cached --quiet; then
    echo "nothing to update — AUR repo already matches"
  else
    git commit -m "uglycraft-git $(date +%Y%m%d)"
    git push
  fi
"""

[tool.poe.tasks._push-linux]
shell = "butler push dist/linux-64 dbausch/uglycraft:linux-64 --userversion $(git describe --tags --abbrev=0 | sed 's/^v//')"

[tool.poe.tasks._push-windows]
shell = "butler push dist/windows-64 dbausch/uglycraft:windows-64 --userversion $(git describe --tags --abbrev=0 | sed 's/^v//')"
